# hose

./: .env.sample  .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: devnet-test.yaml  rust.yml
blueprint/: Cargo.toml  plutus.json
blueprint-test/: Cargo.toml
blueprint-test/src/: lib.rs
blueprint/src/: ir.rs  lib.rs  main.rs  safe_rename.rs  schema.rs
configs/mainnet/: config.toml  conway.json
configs/preview/: shelley.json
configs/testnet/: byron.json  shelley.json
devnet-tests/: Cargo.toml  README.md
devnet-tests/src/: lib.rs
docs/hackathon/slides/: 1.md  2.md  3.md  4.md  5.md
example/: Cargo.toml
example/src/: config.rs  devnet_tests.rs  main.rs
example/src/devnet_tests/: context.rs  indexer.rs  lock.rs  util.rs
hose/: Cargo.toml
hose-blueprint/: Cargo.toml  README.md  plutus.json
hose-blueprint/internal/: Cargo.toml
hose-blueprint/internal/src/: cbor.rs  ir.rs  lib.rs  module.rs  reference.rs  safe_rename.rs  schema.rs
hose-blueprint/src/: ir.rs  lib.rs  schema.rs
hose-blueprint/test/: Cargo.toml
hose-blueprint/test/src/: lib.rs
hose-blueprint/test/static/: plutus.json
hose-devnet/: Cargo.toml  README.md
hose-devnet-macros/: Cargo.toml
hose-devnet-macros/src/: lib.rs
hose-devnet-tests/: Cargo.toml  README.md
hose-devnet-tests/src/: lib.rs
hose-devnet/src/: config.rs  context.rs  lib.rs
hose-ogmios/: Cargo.toml
hose-primitives/: Cargo.toml
hose-primitives/src/: bigint.rs  datatypes.rs  lib.rs  network.rs  params.rs  tx.rs
hose-submission/: Cargo.toml
hose-submission/src/: error.rs  lib.rs  node.rs  ogmios.rs
hose-submission/src/ogmios/: client.rs  evaluate.rs  mod.rs  network_genesis.rs  query.rs  submit.rs  types.rs
hose-txbuilder/: Cargo.toml
hose-txbuilder/src/: builder.rs  config.rs  fee.rs  lib.rs  main.rs  simple_tx.rs  transaction.rs  wallet.rs
hose-txbuilder/src/submission/: ogmios.rs
hose/src/builder/: api.rs  coin_selection.rs  collateral.rs  fee.rs  mod.rs
hose/src/builder/tx/: built.rs  error.rs  mod.rs
hose/src/builder/tx/staging/: build.rs  mod.rs  tests.rs
hose/src/primitives/: mod.rs  output.rs  reward.rs  script.rs  stake.rs
hose/src/wallet/: hd_key.rs  key.rs  mod.rs
src/: config.rs  lib.rs  main.rs  params.rs  simple_tx.rs  submission.rs  wallet.rs
src/builder/: coin_selection.rs  fee.rs  mod.rs
src/builder/selection/: mod.rs
src/builder/transaction/: build.rs  build_conway.rs  error.rs  mod.rs  model.rs  serialise.rs
src/builder/transaction/model/: assets.rs  built_tx.rs  mod.rs  script.rs  staging_tx.rs  txo.rs
src/builder/tx/: built.rs  error.rs
src/builder/tx/staging/: build.rs  mod.rs  tests.rs
src/evaluator/: mod.rs  n2c.rs
src/fetcher/: mod.rs
src/ogmios/: codec.rs  evaluate.rs  mod.rs  pparams.rs  script.rs  submit.rs  utxo.rs
src/primitives/: data.rs  input.rs  mod.rs  params.rs  script.rs  signer.rs
src/providers/: mod.rs
src/providers/ogmios/: codec.rs  evaluate.rs  mod.rs  script.rs  submit.rs  utxo.rs
src/selector/: mod.rs
src/submission/: direct_to_node.rs  ogmios.rs
src/submitter/: mod.rs  n2c.rs
src/wallet/: builder.rs  mod.rs
src/wallet/hd/: mod.rs  private.rs  public.rs
