[package]
name = "hose"
version = "0.1.0"
edition = "2024"

[lib]
name = "hose"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.49", features = ["full"] }
tracing = "0.1"
thiserror = "2.0"
anyhow = "1.0"
num = "0.4"

hydrant = { git = "https://github.com/liqwid-labs/hydrant" }
ogmios-client = { git = "https://github.com/liqwid-labs/ogmios-client-rs" }
polymer = { git = "https://github.com/liqwid-labs/polymer" }
pallas = { git = "https://github.com/txpipe/pallas", features = ["unstable"] }

hex = "0.4"
minicbor = "2.1"
bip32 = "0.5"
bech32 = "0.11"
bip39 = "2.2"
cryptoxide = { version = "0.5", features = ["hmac", "pbkdf2", "sha2"], default-features = false }
ed25519-bip32 = "0.4"

[workspace]
members = ["example"]
