[package]
name = "hose"
version = "0.1.0"
edition = "2024"

[lib]
name = "hose"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
num = { workspace = true }
pallas = { workspace = true }
hydrant = { workspace = true }
cryptoxide = { workspace = true }
bip32 = { workspace = true }
bech32 = { workspace = true }
bip39 = { workspace = true }
minicbor = { workspace = true }
ed25519-bip32 = { workspace = true }
ogmios-client = { workspace = true }
hex = { workspace = true }

[workspace.dependencies]
tokio = { version = "1.49", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3.19"
thiserror = "2.0"
anyhow = "1.0"
num = "0.4"

hydrant = { git = "https://github.com/liqwid-labs/hydrant" }
ogmios-client = { git = "https://github.com/liqwid-labs/ogmios-client-rs" }
polymer = { git = "https://github.com/liqwid-labs/polymer" }
pallas = { git = "https://github.com/txpipe/pallas", features = ["unstable"] }

hex = "0.4"
minicbor = "2.1"
bip32 = "0.5"
bech32 = "0.11"
bip39 = "2.2"
cryptoxide = { version = "0.5", features = [
    "hmac",
    "pbkdf2",
    "sha2",
], default-features = false }
ed25519-bip32 = "0.4"

[workspace]
members = ["hose-devnet-macros", "hose-devnet", "devnet-tests"]
