[package]
name = "blueprint"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
pallas = { path = "../../pallas/pallas", features = ["applying", "unstable"] }
proc-macro2 = "1.0"
heck = "0.5.0"
anyhow = "1.0"
thiserror = "2.0"
