[package]
name = "devnet-tests"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }

hose-devnet = { path = "../hose-devnet" }

minicbor = { workspace = true, features = ["alloc"] }

hose = { path = ".." }
hydrant = { git = "https://github.com/liqwid-labs/hydrant" }
ogmios-client = { git = "https://github.com/liqwid-labs/ogmios-client-rs" }
pallas = { git = "https://github.com/txpipe/pallas", features = ["unstable"] }
