[package]
name = "hose-demo"
edition = "2024"

[[bin]]
name = "hose-demo"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
anyhow = "1.0"
hex = "0.4.3"

clap = { version = "4.5.51", features = ["derive", "env"] }
dotenv = "0.15.0"
url = "2.5.7"
test-context = "0.5.4"
minicbor = { version = "2.1.3", features = ["alloc"] }

hose = { path = ".." }
hydrant = { path = "../../hydrant" }
pallas = { git = "https://github.com/txpipe/pallas", features = ["unstable"] }
