[package]
name = "hose-devnet-tests"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
hex = "0.4"

hose-devnet = { path = "../hose-devnet" }
hose = { path = "../hose" }
hydrant = { git = "https://github.com/liqwid-labs/hydrant" }
ogmios-client = { git = "https://github.com/liqwid-labs/ogmios-client-rs" }
pallas = { git = "https://github.com/txpipe/pallas", features = ["unstable"] }
