[package]
name = "hose-primitives"
version = "0.1.0"
edition = "2021"

[dependencies]
pallas = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = "0.4.39"
num-bigint = { workspace = true }
num = { workspace = true }
minicbor = { workspace = true }
hex = { workspace = true }
