[package]
name = "hose-submission"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
pallas = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }

betterfrost_client = { workspace = true }

futures-util = "0.3.31"
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread", "signal"] }
tokio-tungstenite = "0.26.1"
