[package]
name = "hose-submission"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
pallas = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }

hose-primitives = { path = "../hose-primitives" }
betterfrost_client = { workspace = true, optional = true }


reqwest = { version = "0.12.25", features = ["json"] }
futures-util = "0.3.31"
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread", "signal"] }
tokio-tungstenite = { version = "0.26.1", optional = true }
uuid = { version = "1.13.1", features = ["v4"] }
num_enum = "0.7.3"


[features]
default = ["ogmios"]
node = ["dep:betterfrost_client"]
ogmios = ["dep:tokio-tungstenite"]
