[package]
name = "hose-txbuilder"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/liqwid-labs/hose"
homepage = "https://github.com/liqwid-labs/hose"
authors = ["Emily Martins <emily@liqwid.finance>", "Liam Dyer <liam@liqwid.finance>"]

[dependencies]
betterfrost_client = { git = "https://github.com/liqwid-labs/betterfrost" }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-rustls", "bigdecimal", "json"] }

clap = { version = "4.5.26", features = ["derive", "env"] }
dotenv = "0.15.0"
env_logger = "0.11.6"
thiserror = "2.0.11"
anyhow = "1.0.95"
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread", "signal"] }
socket2 = "0.5.8"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.135"
hex = "0.4.3"
minicbor = "0.25.1"

pallas = { git = "https://github.com/txpipe/pallas", features = ["applying", "unstable"] }
tracing = "0.1.41"
paste = "1.0.15"
chrono = "0.4.39"
bip32 = "0.5.2"

hose-blueprint = { path = "../hose-blueprint" }
tokio-tungstenite = "0.26.1"
futures-util = "0.3.31"
