[package]
name = "hose-txbuilder"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/liqwid-labs/hose"
homepage = "https://github.com/liqwid-labs/hose"
authors = ["Emily Martins <emily@liqwid.finance>", "Liam Dyer <liam@liqwid.finance>"]

[lib]
path = "src/lib.rs"

[dependencies]
pallas = { workspace = true }
bip32 = "0.5.2"

thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
minicbor = { workspace = true }

hose-primitives = { path = "../hose-primitives" }
hose-blueprint = { path = "../hose-blueprint" }
hose-submission = { path = "../hose-submission" }

betterfrost_client = { workspace = true }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-rustls", "bigdecimal", "json"] }

clap = { version = "4.5.26", features = ["derive", "env"] }
dotenv = "0.15.0"
env_logger = "0.11.6"
socket2 = "0.5.8"

tracing = "0.1.41"
paste = "1.0.15"
