[package]
name = "hose"
version = "0.1.0"
edition = "2024"

[lib]
name = "hose"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

pallas = { workspace = true }
hydrant = { workspace = true }
ogmios-client = { workspace = true }

num = "0.4"
hex = "0.4"

bip32 = "0.5"
bech32 = "0.11"
bip39 = "2.2"
cryptoxide = { version = "0.5", features = [
    "hmac",
    "pbkdf2",
    "sha2",
], default-features = false }
ed25519-bip32 = "0.4"

