[package]
name = "blueprint-test"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
heck = "0.5.0"

pallas = { path = "../../pallas/pallas", features = ["applying", "unstable"] }
minicbor = "0.25.1"

blueprint = { path = "../blueprint" }
