[package]
name = "blueprint-test"
version = "0.1.0"
edition = "2021"

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
heck = "0.5.0"

pallas = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

minicbor = "0.25.1"

hose-blueprint = { path = "../" }
